--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <section>
         <h2 class="title">Mohan Khadka</h2>
         <p>I'm Mohan, a skilled and creative person with a passion for learning about coding.</p>
-        <img src="C:\Users\mohan\Documents\GitHub\my-portfolio1\IMG_0433.jpeg" style="width: 200px; height: 300px;">
+        <img src="IMG_0433.jpeg" style="width: 200px; height: 300px;">
     </section>
 
     <h1>About Me</h1>
